cp project/force-app/main/default/objects/Opportunity/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>If loan is required</description>
    <inlineHelpText>If loan is required</inlineHelpText>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>