cp project/force-app/main/default/objects/Opportunity/fields/Inventory_Unit__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Unit</label>
    <referenceTo>Inventory_Unit__c</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>