cp project/force-app/main/default/objects/Opportunity/fields/Sales_Executive_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_Remarks__c</fullName>
    <label>Sales Executive Remarks</label>
    <type>TextArea</type>
</CustomField>