cp project/force-app/main/default/objects/Opportunity/validationRules/Bank_Name_Required_When_Loan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_Required_When_Loan_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Loan_Required__c = TRUE,
    ISBLANK(Bank_Name__c)
)</errorConditionFormula>
    <errorMessage>Please enter the Bank Name when Loan Required is selected.</errorMessage>
</ValidationRule>