cp project/force-app/main/default/objects/Opportunity/validationRules/Booking_Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Booking_Amount__c)), Booking_Amount__c &lt;= 0)</errorConditionFormula>
    <errorMessage>Booking Amount must be greater than zero.</errorMessage>
</ValidationRule>