cp project/force-app/main/default/objects/Opportunity/validationRules/Expected_Registration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Registration_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Registration_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Expected Registration Date cannot be in the past.</errorMessage>
</ValidationRule>