cp project/force-app/main/default/objects/Opportunity/validationRules/Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(TEXT(Lost_Reason__c))
)</errorConditionFormula>
    <errorMessage>Lost Reason is mandatory for Closed Lost opportunities.</errorMessage>
</ValidationRule>