cp project/force-app/main/default/objects/Opportunity/validationRules/Opportunity_Tower_Must_Belong_To_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Tower_Must_Belong_To_Project</fullName>
    <active>true</active>
    <description>Ensures that the selected Tower belongs to the selected Project on Opportunity.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Project__c)),
    NOT(ISBLANK(Tower__c)),
    Tower__r.Project__c != Project__c
)</errorConditionFormula>
    <errorDisplayField>Tower__c</errorDisplayField>
    <errorMessage>Selected Tower does not belong to the selected Project.</errorMessage>
</ValidationRule>