cp project/force-app/main/default/objects/Opportunity/validationRules/Opportunity_Unit_Must_Belong_To_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Unit_Must_Belong_To_Project</fullName>
    <active>true</active>
    <description>Ensures that the selected Unit belongs to the selected Project on Opportunity.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Project__c)),
    NOT(ISBLANK(Unit__c)),
    Unit__r.Project__c != Project__c
)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Selected Unit does not belong to the selected Project.</errorMessage>
</ValidationRule>