cp project/force-app/main/default/objects/Opportunity/validationRules/Project_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Project__c)</errorConditionFormula>
    <errorMessage>Please select a Project.</errorMessage>
</ValidationRule>